# test_fempy

./: README.md  fempy.f90  meson.build  mxfem-f2pywrappers2.f90  mxfemmodule.c  my_git_version.h  pyproject.toml
.github/workflows/: build_source_distribution.yml  build_wheels_for_aarch64.yml  build_wheels_for_amd64.yml  build_wheels_for_armv7l.yml  build_wheels_for_macos.yml  build_wheels_for_win.yml  build_wheels_on_amd64.yml  build_wheels_on_arm.yml  build_wheels_on_win.yml  run_all.yml  run_all_v2.yml  wheels.yml
both_v1/: meson.build  pyproject.toml
both_v1/lib/crtomo_tests/: meson.build
both_v1/lib/crtomo_wrapper/: meson.build
both_v1/pycrmod_v1/: meson.build  pycrmodmodule.c
both_v1/pycrmod_v1/src/: fempy.f90
both_v1/pycrtomo_v2/: meson.build  pycrtomomodule.c  pyproject.toml
both_v1/pycutmck_v1/: meson.build
pycrmod_v1/: meson.build  pyproject.toml
pycrmod_v1/src/: fempy.f90
