[build-system]
requires = ["meson-python", "numpy"]
build-backend = "mesonpy"

[project]
name = 'pycrtomomod'
version = '0.0.1'
description = 'Investigate integrating a cpp module into the python crmod code'
# readme = 'README.md'
requires-python = '>=3.8'
# license = {file = 'LICENSE.txt'}
authors = [
  {name = 'Maximilian Weigand', email = 'mweigand@geo.uni-bonn.de'},
]

[project.scripts]
CRMod = 'crtomo_wrapper.crmod:main'
CRTomo = 'crtomo_wrapper.crtomo:main'
pycrtomo_test = 'crtomo_tests.pycrtomo:main'

[tool.meson-python.args]
setup = ['--default-library=static']

# [tool.cibuildwheel]
# # https://cibuildwheel.pypa.io/en/stable/options/#build-skip
# # archs = ["auto"]
# archs = ["x86_64"]
# # build = "*"
# build = "cp312-manylinux_x86_64"
# build_windows = "cp312-win_amd64"
# skip = ""
